# rust_console_wordle

./: Cargo.toml
src/: main.rs
src/gaming/: mod.rs
src/gaming/io/: mod.rs  output_string.rs
src/gaming/validation/: mod.rs
src/gaming/word_serving/: answer.rs  answer_item.rs  answers.rs  mod.rs  serving.rs  words.rs
