[package]
name = "tae-wondle"
version = "0.1.0"
edition = "2021"
include = ["src/**/*.rs", "tests/*.rs", "Cargo.toml"]
license="MIT"
description="simple clone, of famous game \"Wordle\", for terminal console."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"